--- a/webchatserver/chatapp/templates/base.html
+++ b/webchatserver/chatapp/templates/base.html
@@ -5,6 +5,8 @@
   <title>{% block title %}Django Auth Tutorial{% endblock %}</title>
 </head>
 <body>
+  <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
   <main>
     {% block content %}
     {% endblock %}
