--- a/webchatserver/chatapp/templates/registration/signup.html
+++ b/webchatserver/chatapp/templates/registration/signup.html
@@ -13,6 +13,6 @@
        {% endfor %}
      </div>
    {% endfor %}
-   <button type="submit">Sign up</button>
+   <button type="submit">Cadastrar</button>
  </form>
 {% endblock %}
