--- a/webchatserver/chatapp/templates/base.html
+++ b/webchatserver/chatapp/templates/base.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <title>{% block title %}Django Auth Tutorial{% endblock %}</title>
 </head>
 <body>
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+  <script type="text/javascript" src="jemoji/jemoji.js"></script>
+  <link rel="stylesheet" src="jemoji/jemoji.css"/>
   <main>
     {% block content %}
     {% endblock %}
