adicionado bootstrap e aplicações locais rodando com sqlite

--- a/webchatserver/chatapp/templates/base.html
+++ b/webchatserver/chatapp/templates/base.html
@@ -7,8 +7,7 @@
 <body>
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-  <script type="text/javascript" src="jemoji/jemoji.js"></script>
-  <link rel="stylesheet" src="jemoji/jemoji.css"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
   <main>
     {% block content %}
     {% endblock %}
