--- a/webchatserver/chatapp/templates/registration/signup.html
+++ b/webchatserver/chatapp/templates/registration/signup.html
@@ -1,18 +1,26 @@
 {% extends 'base.html' %}
 
+{% block title %}Sign up{% endblock %}
+
 {% block content %}
-<h2>Sign up</h2>
- <form method="post">
-   {% csrf_token %}
-   {% for field in form %}
-     <div>
-       {{ field.label_tag }}<br>
-       {{ field }}
-       {% for error in field.errors %}
-         <p style="color: red">{{ error }}</p>
-       {% endfor %}
-     </div>
-   {% endfor %}
-   <button type="submit">Cadastrar</button>
- </form>
+
+<div class="container">  
+  <form method="post">
+    <h2>Sign up</h2>
+
+    {% csrf_token %}
+    {% for field in form %}
+      <div class="labels-signup">
+        <div class="containers-signup">{{ field.label_tag }}<br>
+        {{ field }}</div> 
+        {% for error in field.errors %}
+          <p>{{ error }}</p>
+        {% endfor %}
+      </div>
+    {% endfor %}
+    <hr>
+    <button type="submit" class="btns">Cadastrar</button>
+  </form>
+
+</div>
 {% endblock %}
