--- a/webchatserver/chatapp/static/css/style.css
+++ b/webchatserver/chatapp/static/css/style.css
@@ -67,3 +67,46 @@ h2{
 .container-signup p {
     color: #f00;
 }    
+
+/*CHAT*/
+.container-chat{ 
+    /*background-image: url('../img/header.jpg');*/
+    /*background-color: #333;*/
+    background-image: linear-gradient(to top right, #800000, #fff);
+    font-family: 'Times New Roman', Times, serif; 
+}
+.container-chat p{
+    text-align: right; 
+    margin: 10px; 
+    padding: 10px; 
+    font-family: 'Times New Roman', Times, serif;
+}
+.container-chat p a{
+    font-size: 1.5em;
+    color: #000; 
+    text-decoration: none;
+}
+#messages-div{ 
+    background-image: linear-gradient(to bottom left, #ccc, #fff); 
+    padding: 10px;
+    font-family: 'Times New Roman', Times, serif; 
+    border-radius: 0 0 40px 15px;
+}
+.container-input-btnEnviar{
+    display: flex;
+    margin-top: 1%; 
+}
+
+.container-input-btnEnviar #text-field{
+    border-radius: 0 0 0 12px; 
+    width: 200px; 
+    height: 25px; 
+    padding: 5px; 
+    margin-right: .5%;
+}
+
+.user-chat{
+    text-align: left; 
+    margin: 10px; 
+    padding: 10px;
+}
