alterando hi para olá

--- a/webchatserver/chatapp/templates/chatapp/home.html
+++ b/webchatserver/chatapp/templates/chatapp/home.html
@@ -9,7 +9,7 @@
     <div>
         <div class="container-chat"> 
             <p><a href="{% url 'chatapp:logout' %}">Logout</a></p>
-            <div class="user-chat"><h2>Hi {{ user.username }} {{user.id}}!</h2></div> 
+            <div class="user-chat"><h2>Olá {{ user.username }}!</h2></div>
         </div>
 
         <div id="messages-div"></div>
